# oasia

./: .env.example  .gitignore  =1.30  README.md  app.py  config.py  magnifi_dashboard.html  main.py  pyproject.toml  requirements.txt  weave_config.py
agent/: __init__.py  base_agent.py  orchestrator.py  prompts.py  skill_loader.py  tools.py
analytics/: __init__.py  bgm_model.py  cashflows.py  model_tft.py  neural_prepay.py  oas_solver.py  prepay.py  rate_paths.py  risk.py  scenarios.py
auth/: __init__.py  ldap_auth.py  login_page.py  middleware.py  routes.py  session.py
cof/: __init__.py  agent_panel.py  base_agent.py  observability-config.yaml  orchestrator.py  phoenix_config.py  tracing.py  weave_config.py  weave_evals.py
data/: __init__.py  intex_client.py  market_data.py  pool_universe.py  position_data.py  schedule_config.json  snapshot_store.py  universe_1000.py  watchlist_store.py
db/: __init__.py  cache.py  connection.py  projections.py
docs/: requirements.md  stakeholder_summary.md  system_architecture.md
evals/: __init__.py  dataset.py  judges.py  run_evals.py  run_workflow_evals.py
portfolio/: __init__.py  aggregator.py  attribution.py  book_yield.py  eve.py
reports/: oasia_report_2026-03-30.pptx
scripts/: backfill_snapshots.py  calibrate_curves.py  export_report.py  export_to_gslides.py  generate_hypothetical_bgm_model.py  generate_hypothetical_prepay_model.py  generate_universe_1000.py  test_weave.py  warm_cache.py
tests/: __init__.py  test_attribution.py  test_book_yield.py  test_cashflows.py  test_model_tft.py  test_oas_solver.py  (+5 more)
(+52 files in other folders)
